--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack-dev-server": "^3.8.2",
     "webpack-merge": "^4.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1",
+    "@material/typography": "^3.1.0"
+  }
 }
